2.34 "" (released xx.xx.xxxx)

  * Document the Antivirus rule type.
    Type: documentation
    Changed: templates/classic/help.html

2.33 "The Stunt Man" (released 12.10.2005)

  * Added enable class attr to filters, allowing them to be disabled
    automatically if a needed dependency could not be loaded.
    Type: feature
    Changed: wc/configuration.py, wc/filters/*.py

  * If a server has a list of IP addresses and the first one failed, try
    also the other ones if they allow a connect.
    Type: feature
    Changed: wc/proxy/ClientServerMatchmaker.py, wc/proxy/Dispatcher.py

  * Support chunked encoding trailers for client and server.
    Type: feature
    Changed: wc/proxy/{Headers,HttpClient,HttpServer}.py

  * Support replacing of header values only when they exist.
    Type: feature
    Changed: templates/classic/macros/rules.html, config/filter.dtd,
      wc/filter/rules/HeaderRule.py, wc/filter/Header.py,
      wc/webgui/context/filterconfig_html.py

  * Added check for SSL support before generating SSL certificates.
    Type: feature
    Changed: webcleaner-certificates

  * Document software requirements for filter modules in the web
    interface, and disable configuration of features with missing
    requirements.
    Type: feature
    Changed: templates/classic/{help,configuration}.html,
      wc/webgui/context/configuration_html.py

  * Improve the restart page by asking a question before actually
    restarting. Use links to this page instead of form buttons.
    Type: feature
    Added: templates/classic/restart_ask.html,
      wc/webgui/context/restart_ask_html.py
    Changed: setup.py, templates/classic/{adminpass, configuration}.html

  * Fix HTTP client authenticate: send multiple (WWW|Proxy)-Authenticate
    headers instead of only one. And change the order by using "Basic"
    authentication before "Digest".
    These two changes above fix the "Page unavailable" bug when using
    Internet Explorer to view the web configuration.